# ChangeLog for games-fps/alephone-infinity
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/alephone-infinity/ChangeLog,v 1.8 2010/05/23 18:53:34 pacho Exp $

  23 May 2010; Pacho Ramos <pacho@gentoo.org>
  alephone-infinity-20080622.ebuild:
  stable amd64, bug 309705

  26 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  alephone-infinity-20080622.ebuild:
  stable x86, bug 309705

  07 Nov 2009; Mounir Lamouri <volkmar@gentoo.org>
  alephone-infinity-20080622.ebuild:
  Keywording for ppc, bug 275132

*alephone-infinity-20080622 (04 Sep 2008)

  04 Sep 2008; Tristan Heaven <nyhm@gentoo.org> -alephone-infinity-1.ebuild,
  +alephone-infinity-20080622.ebuild:
  Version bump

  18 Mar 2008; Tristan Heaven <nyhm@gentoo.org> alephone-infinity-1.ebuild:
  Add ~amd64 keyword, bug #206647

  05 Jul 2007; Markus Rothe <corsair@gentoo.org> alephone-infinity-1.ebuild:
  Added ~ppc64; bug #183570

  13 Feb 2007; Tristan Heaven <nyhm@gentoo.org> -files/AlephOne.png,
  alephone-infinity-1.ebuild:
  Move icon to mirror://gentoo

*alephone-infinity-1 (03 Jun 2006)

  03 Jun 2006; <Tupone@gentoo.org> +files/AlephOne.png,
  +alephone-infinity-1.ebuild:
  Initial import.  Ebuild submitted by David Bailey and Ben Urban, bug #82912
