@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST MarathonInfinity.zip 30109883 RMD160 f9985ba752728c31d5370cd2fd5c64198f115c61 SHA1 dbff98ce3a9c27b6c2a5eb79ce3937eee72888a2 SHA256 e8294df4dcd81b11d74ceedd6d13580ea13ca62d3952eb535b009387a9a4b90a
-DIST alephone-infinity.png 19193 RMD160 67a49026cba562fccd702a079e53e96828c52e18 SHA1 a79747da4b18b5e5e5bf18db6940986ee16c8101 SHA256 cb2e18364347b5e4e256401f2fd9b35b92ed3763375f2f4ea2c190915a7df5c0
-EBUILD alephone-infinity-20080622.ebuild 1100 RMD160 b6fc536a4a656664d6f8794cf673ed2eac5ab313 SHA1 f88cbf70408a7584c30dc2546b19eef815e60d40 SHA256 67b6a05f8b6399369302af23019087248a5fae5c922accfa468fe14feeb53d60
-MISC ChangeLog 1301 RMD160 b241ba504fa912e6f25ec442d831d50494245802 SHA1 c0615c7b1c3d745d146d0874dd7a8c35b33e4e89 SHA256 0846aefae68cc4cfaf3f9882a6b7c918a9d4e7e2ed5ee9ad203434cc1c521d96
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+DIST MarathonInfinity.zip 30109883 SHA256 e8294df4dcd81b11d74ceedd6d13580ea13ca62d3952eb535b009387a9a4b90a SHA512 1f347615b96d2c07914cda78bdc6971311f3933af78debfcd9fa87a0a3048220726a082602b7a76f516f7b3dd3240d1ea843794ab34e4e9e7733342d9d9fe5b1 WHIRLPOOL a8fefe0dc8c625fcb2fba9da65148d622513189bbb62ae27545b27f39d610f96045498aeabe1a2b35487524e078041e14a17089dda488280fc038a6191ce0710
+DIST alephone-infinity.png 19193 SHA256 cb2e18364347b5e4e256401f2fd9b35b92ed3763375f2f4ea2c190915a7df5c0 SHA512 ad5c683aae4ee0afa306aaf33c9ad93a2eee59a4283166aada58a48a8dbbe8de62c8af0b04b143366448ef101ba8b2530cbc8bc5b3e1de62c5177775fae6bfd3 WHIRLPOOL b1179b771dc2b43823a648eb44b8197c3d777976820cc6650a7be7e8e415bfdff77b76a5331f9f56e8e49b7efd5df335b98f72e2e0645beb0c317e12706640c5
+EBUILD alephone-infinity-20080622.ebuild 1095 SHA256 d6293b5f0e0a3e4c69617a0ac6e7304f0b96424bab99c2daaca6f8a17cc3d380 SHA512 3a382f4f5836604d6d7557ded1447db41def423db8c367321c11ba4b730f056f1afb47ddf8bd61be80c45ca57b46b86e84137c86068e2bf38092fd1bbdd78bc4 WHIRLPOOL 475e8f711493c23a3ac1082316f29bbfe240645ed8e34a183419635fcd2b3001f0979767acdf2ec2ebeaf22b5b98d759154060f1823d17b17a6a975a548c794d
+MISC ChangeLog 1436 SHA256 da68724afffd339167d11383c455ea1e1f376ec68c3777ba74efc9c6c58d059c SHA512 d30b13713ece879f0d28176bb1cf3940c26d7c3e1b9e503df03e0ce2fc4f011af4baeb622849f2c8c1e1c5182826bf4cc8e0be967e1ada6aa9d60e67223474eb WHIRLPOOL ae6549c1fc7c6cb87b47062e75c903434054c1fc9e0f2fcdca10c6fd7527944bfc1ee1999ca66c4cfa797ee58c843fefdff4d813dff311e92aa3a2d1d6f2d922
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEARECAAYFAkv5ebMACgkQCaWpQKGI+9TwPQCfbJePkwbXyPMUSPHdq7fq9j1a
-BusAn3z4RxUAx8KkD8GY37GTfH4aB9Pi
-=eNyG
+iEYEAREIAAYFAlH2xJMACgkQIY77eQFFFC0pkgCdHqtpW9rdfHFlCIpY3qOonKxy
+m8sAoL5VV7OxH5QBITOhKRFE1rkHm16b
+=8i7s
 -----END PGP SIGNATURE-----
