@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/alephone-infinity
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/alephone-infinity/ChangeLog,v 1.8 2010/05/23 18:53:34 pacho Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-fps/alephone-infinity/ChangeLog,v 1.9 2013/07/29 19:37:47 tupone Exp $
+
+  29 Jul 2013; Tupone Alfredo <tupone@gentoo.org>
+  alephone-infinity-20080622.ebuild:
+  Fix SRC_URI. Bug #477848 by Emery Hemingway
 
   23 May 2010; Pacho Ramos <pacho@gentoo.org>
   alephone-infinity-20080622.ebuild:
